--- a/tor-relay-deploy.yml
+++ b/tor-relay-deploy.yml
@@ -13,6 +13,27 @@ spec:
 
 ---
 
+apiVersion: v1
+kind: ConfigMap
+data:
+  torrc: |-
+    ORPort 9001
+    User root
+    DataDirectory /var/lib/tor
+
+    ## A handle for your relay, so people don't have to refer to it by key.
+    Nickname iamd3vilrelay
+    ContactInfo tor at saratchandra.in
+    ExitRelay 0
+    AccountingMax 1600 GBytes
+    AccountingRule sum
+    AccountingStart month 1 00:00
+metadata:
+  name: torrc
+  namespace: default
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -36,6 +57,8 @@ spec:
         volumeMounts:
         - mountPath: "/var/lib/tor"
           name: tor-volume
+        - name: config-volume
+          mountPath: /etc/tor
         resources:
           limits:
             cpu: "0.4"
@@ -45,6 +68,12 @@ spec:
       - name: tor-volume
         persistentVolumeClaim:
           claimName: tor-relay-pvc
+      - name: config-volume
+        configMap:
+          name: torrc
+          items:
+          - key: torrc
+            path: torrc
 
 ---
 
